--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-mmkv": "^3.1.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
-    "zustand": "^5.0.1"
+    "zustand": "^5.0.1",
+    "expo-font": "~13.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
